<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Sound Effects Toggle -->
    <item
        android:id="@+id/action_sound_toggle"
        android:orderInCategory="10"
        android:title="@string/sound_effects"
        android:icon="@android:drawable/ic_lock_silent_mode_off"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_milestones"
        android:orderInCategory="25"
        android:title="@string/milestones"
        android:icon="@android:drawable/star_on"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_surrender"
        android:orderInCategory="50"
        android:title="@string/surrender"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="300"
        android:title="@string/exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="never" />
</menu>