<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Dark" />

    </com.google.android.material.appbar.AppBarLayout>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="3"
        android:rowCount="3"
        android:padding="@dimen/large_margin"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@+id/solutionDepthLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/solutionDepthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solution_depth"
        android:textSize="@dimen/label_text_size"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/small_margin"
        app:layout_constraintTop_toBottomOf="@id/grid"
        app:layout_constraintBottom_toTopOf="@+id/solutionDepthPicker"
        app:layout_constraintStart_toStartOf="@id/solutionDepthPicker"
        app:layout_constraintEnd_toEndOf="@id/solutionDepthPicker" />

    <NumberPicker
        android:id="@+id/solutionDepthPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintTop_toBottomOf="@id/solutionDepthLabel"
        app:layout_constraintBottom_toTopOf="@+id/rotationControlsLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/rotationControlsLayout"
        android:buttonBarStyle="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/solutionDepthPicker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/rotateLeftButton"
            android:buttonBarStyle="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/button_text_color"
            android:text="@string/rotate_left"
            android:textSize="@dimen/button_text_size" />

        <Space
            android:layout_width="@dimen/medium_margin"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/rotateRightButton"
            android:buttonBarStyle="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/button_text_color"
            android:text="@string/rotate_right"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_controls"
        android:buttonBarStyle="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/rotationControlsLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginTop="@dimen/medium_margin">

        <Button
            android:id="@+id/newGameButton"
            android:buttonBarStyle="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/button_text_color"
            android:text="@string/new_game"
            android:textSize="@dimen/button_text_size" />

        <Space
            android:layout_width="@dimen/medium_margin"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/undoButton"
            android:buttonBarStyle="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/button_text_color"
            android:text="@string/undo"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
